--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,15 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  <security-constraint>
+    <web-resource-collection>
+        <web-resource-name>GestionLocation</web-resource-name>
+        <url-pattern>/conta/*</url-pattern>
+    </web-resource-collection>
+
+    <auth-constraint>
+        <role-name>ADMIN</role-name>
+        <role-name>GESTIONNAIRE</role-name>
+    </auth-constraint>
+</security-constraint>
 </web-app>
